; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/lcms2/src/extr_cmstypes.c_Type_U16Fixed16_Read.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/lcms2/src/extr_cmstypes.c_Type_U16Fixed16_Read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct._cms_typehandler_struct = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32, %struct._cms_typehandler_struct*, i32*, i32*, i32)* @Type_U16Fixed16_Read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @Type_U16Fixed16_Read(i32 %0, %struct._cms_typehandler_struct* %1, i32* %2, i32* %3, i32 %4) #0 {
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct._cms_typehandler_struct*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i64*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  store i32 %0, i32* %7, align 4
  store %struct._cms_typehandler_struct* %1, %struct._cms_typehandler_struct** %8, align 8
  store i32* %2, i32** %9, align 8
  store i32* %3, i32** %10, align 8
  store i32 %4, i32* %11, align 4
  %16 = load %struct._cms_typehandler_struct*, %struct._cms_typehandler_struct** %8, align 8
  %17 = call i32 @cmsUNUSED_PARAMETER(%struct._cms_typehandler_struct* %16)
  %18 = load i32*, i32** %10, align 8
  store i32 0, i32* %18, align 4
  %19 = load i32, i32* %11, align 4
  %20 = sext i32 %19 to i64
  %21 = udiv i64 %20, 4
  %22 = trunc i64 %21 to i32
  store i32 %22, i32* %15, align 4
  %23 = load i32, i32* %7, align 4
  %24 = load i32, i32* %15, align 4
  %25 = call i64 @_cmsCalloc(i32 %23, i32 %24, i32 8)
  %26 = inttoptr i64 %25 to i64*
  store i64* %26, i64** %12, align 8
  %27 = load i64*, i64** %12, align 8
  %28 = icmp eq i64* %27, null
  br i1 %28, label %29, label %30

29:                                               ; preds = %5
  store i8* null, i8** %6, align 8
  br label %62

30:                                               ; preds = %5
  store i32 0, i32* %14, align 4
  br label %31

31:                                               ; preds = %54, %30
  %32 = load i32, i32* %14, align 4
  %33 = load i32, i32* %15, align 4
  %34 = icmp slt i32 %32, %33
  br i1 %34, label %35, label %57

35:                                               ; preds = %31
  %36 = load i32, i32* %7, align 4
  %37 = load i32*, i32** %9, align 8
  %38 = call i32 @_cmsReadUInt32Number(i32 %36, i32* %37, i32* %13)
  %39 = icmp ne i32 %38, 0
  br i1 %39, label %45, label %40

40:                                               ; preds = %35
  %41 = load i32, i32* %7, align 4
  %42 = load i64*, i64** %12, align 8
  %43 = bitcast i64* %42 to i8*
  %44 = call i32 @_cmsFree(i32 %41, i8* %43)
  store i8* null, i8** %6, align 8
  br label %62

45:                                               ; preds = %35
  %46 = load i32, i32* %13, align 4
  %47 = sitofp i32 %46 to double
  %48 = fdiv double %47, 6.553600e+04
  %49 = fptosi double %48 to i64
  %50 = load i64*, i64** %12, align 8
  %51 = load i32, i32* %14, align 4
  %52 = sext i32 %51 to i64
  %53 = getelementptr inbounds i64, i64* %50, i64 %52
  store i64 %49, i64* %53, align 8
  br label %54

54:                                               ; preds = %45
  %55 = load i32, i32* %14, align 4
  %56 = add nsw i32 %55, 1
  store i32 %56, i32* %14, align 4
  br label %31

57:                                               ; preds = %31
  %58 = load i32, i32* %15, align 4
  %59 = load i32*, i32** %10, align 8
  store i32 %58, i32* %59, align 4
  %60 = load i64*, i64** %12, align 8
  %61 = bitcast i64* %60 to i8*
  store i8* %61, i8** %6, align 8
  br label %62

62:                                               ; preds = %57, %40, %29
  %63 = load i8*, i8** %6, align 8
  ret i8* %63
}

declare dso_local i32 @cmsUNUSED_PARAMETER(%struct._cms_typehandler_struct*) #1

declare dso_local i64 @_cmsCalloc(i32, i32, i32) #1

declare dso_local i32 @_cmsReadUInt32Number(i32, i32*, i32*) #1

declare dso_local i32 @_cmsFree(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
